--- a/styles.css
+++ b/styles.css
@@ -528,7 +528,7 @@ button:active{
     }
     .skills .container{
         margin-top: 5px;
-        width: 100%;
+        width: 365px;
     }
 }
 
